# T1Prep

./: .gitattributes  .gitignore  AGENTS.md  Agents.md  BIDS-Naming.txt  CHANGES.txt  CLAUDE.md  Dockerfile  ENVIRONMENT_USAGE.md  Makefile  Names.tsv  README.md  README_pypi.md  README_python.md  T1Prep_defaults.txt  T1prep.py  ToDo  Windows-Installation.txt  cat24_bc.m  cat24_bcs.m  cat_viewsurf_defaults.txt  defaults.txt  pyproject.toml  requirements.txt  requirements_python3.9.txt  rm_vessels.m  setup.py  test_native.py
.github/workflows/: publish-pypi.yml  update-dockerfile.yml  update-t1prep-version.yml
T1Prep/: __init__.py  predict.py  segment.py  utils.py
ext/SplineSmooth3D/: README.txt  SplineSmooth3D.py
ext/deepmriprep/: segment.py  utils.py
ext/lab2im/: edit_volumes.py  layers.py  utils.py
ext/neuron/: layers.py  models.py  utils.py
ext/nxbc/: README.txt
scripts/: CAT_GrepJson  CAT_Surf2ROIMulti_ui  CAT_SurfCurvature_ui  CAT_SurfParameters_ui  CAT_SurfResampleMulti_ui  CAT_SurfView  CAT_VolSmooth_ui  README.md  SynthSR_predict.py  SynthSeg_predict.py  T1Prep  T1Prep.sh  T1Prep_longitudinal  T1Prep_predict.py  T1Prep_ui  T1Prep_utils.sh  __init__.py  activate_env.sh  cat_viewsurf.sh  cli.py  deepmriprep_predict.py  dice.sh  install.sh  install_t1prep.sh  kappa.sh  nu_correction.py  nu_correction_old.py  nu_correction_synthsr.py  parallelize  partition_hemispheres.py  process_longitudinal.sh  progress_bar.sh  progress_bar_multi.sh  realign_longitudinal.sh  run_webui.sh  run_with_env.sh  segment.py  utils.py  utils.sh
src/: __init__.py  cat_viewsurf.py  cat_viewsurf_new.py  segment.py  segmentation_utils.py  t1prep.py  utils.py
src/t1prep/: __init__.py  _models.py  _segment_utils.py  dice.py  kappa.py  metrics.py  qa.py  realign_longitudinal.py  report.py  rigid_ic.py  segment.py  segmentation_utils.py  surface_estimation.py  t1prep.py  utils.py  vessel_test.py
src/t1prep/cat_surf/: __init__.py
src/t1prep/data/: Names.tsv  __init__.py  cat_surf_view_defaults.txt  cat_viewsurf_defaults.txt
src/t1prep/data/atlases_surfaces_32k/: atlases_surfaces_32k.md  lh.Schaefer2018_600Parcels_17Networks_order.txt  lh.aparc_DK40.freesurfer.txt  lh.aparc_HCP_MMP1.freesurfer.txt  lh.aparc_a2009s.freesurfer.txt
src/t1prep/data/templates_MNI152NLin2009cAsym/: Anatomy3.txt  CoBra.txt  Hypothalamus.csv  IBSR.txt  Melbourne-Subcortex-Atlas-7T.txt  Mori.txt  Schaefer2018_600Parcels_17Networks_order.txt  Thalamic-Nuclei.txt  suit.txt  thalamus.txt
src/t1prep/data/templates_MNI152NLin2009cAsym_copy/: AAL3.txt  Hammers.txt  JulichBrain.txt  LPBA40.txt  Neuromorphometrics.txt
src/t1prep/data/templates_surfaces_164k/: lh.std_curv  rh.std_curv  templates_surfaces_164k.md
src/t1prep/data/templates_surfaces_32k/: templates_surfaces_32k.md
src/t1prep/data/templates_surfaces_4k/: lh.central.freesurfer.gii  lh.inflated.freesurfer.gii  lh.mask  lh.sphere.freesurfer.gii  rh.central.freesurfer.gii  rh.inflated.freesurfer.gii  rh.mask  rh.sphere.freesurfer.gii
src/t1prep/gui/: __init__.py  cat_surf_view.py  cat_viewimage.py  cat_viewsurf.py
src/t1prep/webui/: __init__.py  app.py
src/t1prep/webui/static/: styles.css
src/t1prep/webui/templates/: jobs.html
test/surf/: rh.pbt.Schneider2019_sub-02_T1w_defaced
tests/: test_utils.py
webui/: app.py
webui/static/: styles.css
webui/templates/: index.html  job_detail.html  jobs.html
