[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "T1Prep"
dynamic = ["version"]
description = "T1 PREProcessing Pipeline (aka PyCAT)"
authors = [
    { name = "Christian Gaser", email = "christian.gaser@uni-jena.de" },
]
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.13"
readme = {file = "README_pypi.md", content-type = "text/markdown"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "cat-surf>=1.0.8",
    "nibabel>=3.2",
    "numpy>=1.20",
    "scipy>=1.10.1",
    "torch>=1.11.0",
    "deepmriprep>=0.3.0",
    "deepbet>=1.0.2",
    "torchreg>=0.1.3",
    "spline-resize>=0.1.1",
    "SplineSmooth3D>=0.1.1",
    "nxbc>=0.2.0",
    "requests",
    "flask>=2.3",
    "apscheduler>=3.10",
    "h5py>=3.0",
    "sentry-sdk",
]

[project.scripts]
t1prep = "t1prep.t1prep:main"
cat-viewsurf = "t1prep.gui.cat_viewsurf:main"
t1prep-download-models = "t1prep._models:main"

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
    "vtk>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ChristianGaser/T1Prep"
"Repository" = "https://github.com/ChristianGaser/T1Prep"
"Bug Tracker" = "https://github.com/ChristianGaser/T1Prep/issues"
"Changelog" = "https://github.com/ChristianGaser/T1Prep/releases"

[tool.setuptools]
package-dir = {"" = "src"}
# Standalone bash helpers shipped into <venv>/bin/ on install.  Only scripts
# that are self-contained (no `source utils.sh`, no hardcoded "<repo>/env"
# venv activation) belong here.  The wider bash orchestrator family
# (`scripts/T1Prep`, `scripts/CAT_*_ui`, etc.) stays in the source tree and
# is reached via `scripts/install.sh` for users who want that workflow.
script-files = [
    "scripts/parallelize",
    "scripts/progress_bar_multi.sh",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["t1prep*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "t1prep.__version__"}

[tool.setuptools.package-data]
# Explicitly list data patterns to exclude the large data/models/ directory
# (model weights are downloaded at first use via `t1prep-download-models`).
t1prep = [
    "data/*.tsv",
    "data/*.csv",
    "data/*.txt",
    "data/*.png",
    "data/atlases_surfaces_32k/**",
    "data/templates_MNI152NLin2009cAsym/**",
    "data/templates_surfaces_32k/**",
    "data/templates_surfaces_4k/**",
]

