[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "T1Prep"
dynamic = ["version"]
description = "T1 PREProcessing Pipeline (aka PyCAT)"
authors = [
    { name = "Christian Gaser", email = "christian.gaser@uni-jena.de" },
]
license = {file = "LICENSE"}
requires-python = ">=3.9,<3.13"
readme = {file = "README_pypi.md", content-type = "text/markdown"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "cat-surf>=1.0.8",
    "nibabel>=3.2",
    "numpy>=1.20",
    # macOS 27 rejects scipy's _spropack.so from the 1.15.x cp310 wheels
    # (__thread_bss zero-fill section); cap below 1.14 there. 1.13.1 works.
    "scipy>=1.10.1; sys_platform != 'darwin' or python_version >= '3.11'",
    "scipy>=1.10.1,<1.14; sys_platform == 'darwin' and python_version < '3.11'",
    "torch>=1.11.0",
    "deepmriprep>=0.3.0",
    "deepbet>=1.0.2",
    "torchreg>=0.1.3",
    "spline-resize>=0.1.1",
    "SplineSmooth3D>=0.1.1",
    "nxbc>=0.2.0",
    "requests",
    "flask>=2.3",
    "apscheduler>=3.10",
    "h5py>=3.0",
    "sentry-sdk",
]

[project.scripts]
# NOTE: the canonical CLI is the bash orchestrator ``T1Prep`` (full features,
# incl. --multi batch parallelization), shipped into <venv>/bin via the
# ``script-files`` block below.  The Python single-subject entry is named
# ``t1prep-run`` to avoid colliding with ``T1Prep`` on case-insensitive
# filesystems (macOS), where ``t1prep`` and ``T1Prep`` are the same path.
t1prep-run = "t1prep.t1prep:main"
t1prep-ui = "t1prep.webui.app:main"
cat-viewsurf = "t1prep.gui.cat_viewsurf:main"
t1prep-download-models = "t1prep._models:main"

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
    "vtk>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ChristianGaser/T1Prep"
"Repository" = "https://github.com/ChristianGaser/T1Prep"
"Bug Tracker" = "https://github.com/ChristianGaser/T1Prep/issues"
"Changelog" = "https://github.com/ChristianGaser/T1Prep/releases"

[tool.setuptools]
package-dir = {"" = "src"}
# Bash orchestrator family shipped into <venv>/bin/ on install.
# T1Prep_utils.sh has dual-mode path resolution (source-tree vs installed)
# and the other scripts source it via "${script_dir}/T1Prep_utils.sh", which
# works because setuptools dumps them all into the same bin/ directory.
# Skipped on purpose:
#   - install.sh / activate_env.sh / run_with_env.sh  (bootstrappers)
#   - T1Prep_ui / dice.sh / cat_viewsurf.sh           (hardcode <repo>/env)
#   - realign_longitudinal.sh                         (use `python -m t1prep.realign_longitudinal`)
#   - process_longitudinal.sh                         (depends on the above)
script-files = [
    "scripts/T1Prep",
    "scripts/T1Prep_utils.sh",
    "scripts/parallelize",
    "scripts/progress_bar_multi.sh",
    # Defaults file the bash orchestrator reads; shipped next to the scripts so
    # installed mode (running from <venv>/bin) can find it.
    "T1Prep_defaults.txt",
    "scripts/CAT_GrepJson",
    "scripts/CAT_VolSmooth_ui",
    "scripts/CAT_Surf2ROIMulti_ui",
    "scripts/CAT_SurfParameters_ui",
    "scripts/CAT_SurfResampleMulti_ui",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["t1prep*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "t1prep.__version__"}

[tool.setuptools.package-data]
# Explicitly list data patterns to exclude the large data/models/ directory
# (model weights are downloaded at first use via `t1prep-download-models`).
t1prep = [
    "data/*.tsv",
    "data/*.csv",
    "data/*.txt",
    "data/*.png",
    "data/atlases_surfaces_32k/**",
    "data/templates_MNI152NLin2009cAsym/**",
    "data/templates_surfaces_32k/**",
    "data/templates_surfaces_4k/**",
]
# Flask templates/static for the packaged web UI (`t1prep-ui`).
"t1prep.webui" = [
    "templates/*.html",
    "static/*",
]

